fix(Header): fix layout shift when fetching auth

--- a/client/src/components/Header/header.module.css
+++ b/client/src/components/Header/header.module.css
@@ -42,6 +42,35 @@ nav ul {
 li {
     padding: 4px;
     font-size: 1.2rem;
+    opacity: 0;
+
+    transition: 0.2s;
+}
+
+nav ul.loaded li {
+    animation: fade-in 0.2s forwards;
+}
+
+nav ul.loaded li:nth-child(2) {
+    animation-delay: 0.1s;
+}
+
+nav ul.loaded li:nth-child(3) {
+    animation-delay: 0.2s;
+}
+
+nav ul.loaded li:nth-child(4) {
+    animation-delay: 0.3s;
+}
+
+@keyframes fade-in {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
 }
 
 .headerWelcome {
